Fixed bug where Path.of() wasn't implemented until Java 12 but the entire SALSA3D stack is configured to be built against Java 11.